--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.11",
+    "@amcharts/amcharts4-fonts": "^4.0.1",
+    "@patternfly/react-charts": "^6.12.2",
+    "@patternfly/react-core": "^4.79.2",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.4",
+    "chartist": "^0.11.4",
     "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-chartist": "^0.14.3",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-stripe-elements": "^6.0.1"
+    "react-stripe-elements": "^6.0.1",
+    "react-vizgrammar": "^0.8.9",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
