--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^3.2.1",
     "react-chartist": "^0.14.3",
     "react-chartjs-2": "^2.11.1",
+    "react-chatbox-component": "0.0.5",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-metismenu": "^1.4.0",
