--- a/package.json
+++ b/package.json
@@ -9,24 +9,31 @@
     "@fullcalendar/daygrid": "^5.4.0",
     "@patternfly/react-charts": "^6.12.2",
     "@patternfly/react-core": "^4.79.2",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.19.0",
     "chart.js": "^2.9.4",
     "chartist": "^0.11.4",
+    "lightgallery": "^1.10.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-calendar": "^3.2.1",
     "react-chartist": "^0.14.3",
     "react-chartjs-2": "^2.11.1",
     "react-chatbox-component": "0.0.5",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0",
+    "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
+    "react-lightgallery": "^0.9.0",
     "react-metismenu": "^1.4.0",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-slick": "^0.27.13",
     "react-stripe-elements": "^6.0.1",
     "react-vizgrammar": "^0.8.9",
-    "recharts": "^1.8.5"
+    "reactstrap": "^8.7.1",
+    "recharts": "^1.8.5",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
