--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.4",
     "chartist": "^0.11.4",
+    "jquery": "^3.5.1",
     "lightgallery": "^1.10.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
@@ -26,6 +27,7 @@
     "react-lightgallery": "^0.9.0",
     "react-metismenu": "^1.4.0",
     "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-slick": "^0.27.13",
