--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-big-calendar-like-google": "0.0.3",
     "react-calendar": "^3.2.1",
     "react-chartist": "^0.14.3",
     "react-chartjs-2": "^2.11.1",
