--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fullcalendar-reactwrapper": "^1.0.7",
     "jquery": "^3.5.1",
     "lightgallery": "^1.10.0",
+    "metismenu": "^3.0.6",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
