--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "@patternfly/react-core": "^4.79.2",
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
-<<<<<<< HEAD
-=======
     "chartist": "^0.11.4",
     "fullcalendar-reactwrapper": "^1.0.7",
->>>>>>> dd239c6... Merge branch 'Development' of https://github.com/ayhammymy/React_LandLord into Development
     "jquery": "^3.5.1",
     "lightgallery": "^1.10.0",
     "metismenu": "^3.0.6",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-big-calendar-like-google": "0.0.3",
+    "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.2.1",
     "react-chartist": "^0.14.3",
     "react-chartjs-2": "^2.11.1",
