--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@amcharts/amcharts4-fonts": "^4.0.1",
     "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/interaction": "^5.4.0",
     "@fullcalendar/react": "^5.4.0",
     "@patternfly/react-charts": "^6.12.2",
     "@patternfly/react-core": "^4.79.2",
@@ -14,14 +15,13 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
+    "chartist": "^0.11.4",
     "jquery": "^3.5.1",
     "lightgallery": "^1.10.0",
-    "chartist": "^0.11.4",
     "metismenu": "^3.0.6",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
-    "react-big-calendar-like-google": "0.0.3",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.2.1",
     "react-chartist": "^0.14.3",
