--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.9.4",
     "chartist": "^0.11.4",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "lightgallery": "^1.10.0",
     "metismenu": "^3.0.6",
     "moment": "^2.29.1",
