--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^3.0.2",
     "react-calendar": "^3.2.1",
     "react-chartist": "^0.14.3",
     "react-chartjs-2": "^2.11.1",
