--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartist": "^0.11.4",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
+    "query-string": "^5.1.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.2.1",
@@ -25,7 +26,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-slick": "^0.27.13",
-    "react-stripe-elements": "^6.1.2",
     "reactstrap": "^8.7.1",
     "slick-carousel": "^1.8.1"
   },
