--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Landlord Properties Managment",
+  "name": "Landlord Properties Managment",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "/logo.png",
+      "sizes": "93x93 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "/logo.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "93x93"
     }
   ],
-  "start_url": ".",
+  "start_url": "/landlord/activity",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
