--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "netlify deploy -p",
+    "deploy": "react-scripts build && netlify deploy -p",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
